--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -33,7 +33,7 @@
 
 .md-typeset h2 {
     margin: 0.5em 0 -0em 0;
-    font-weight: 300;
+    font-weight: 500;
 }
 
 .md-typeset a {
@@ -174,6 +174,16 @@
     }
 
     .publication-description-cell {
+        display: inline-table;
+        width: 100% !important;
+    }
+
+    .project-thumbnail-cell {
+        display: none;
+        visibility: hidden;
+    }
+
+    .project-description-cell {
         display: inline-table;
         width: 100% !important;
     }
